--- a/manifest.json
+++ b/manifest.json
@@ -9,8 +9,21 @@
   "background_color": "#f8fafc",
   "theme_color": "#f8fafc",
   "orientation": "portrait",
+  "categories": ["productivity", "lifestyle"],
+  "lang": "en",
+  "dir": "ltr",
   "icons": [
-    { "src": "icons/icon-192x192.png", "sizes": "192x192", "type": "image/png", "purpose": "any maskable" },
-    { "src": "icons/icon-512x512.png", "sizes": "512x512", "type": "image/png", "purpose": "any maskable" }
+    {
+      "src": "icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
   ]
 }
